auth service is ready for production Backend